deployment/mysite-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysite
  labels:
    app: mysite
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysite
  template:
    metadata:
      labels:
        app: mysite
    spec:
      volumes:
      - name: db
        persistentVolumeClaim:
          claimName: db
      containers:
      - name: mysite
        image: ghcr.io/chavezmac/cis92:main
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
            ephemeral-storage: 20Mi
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: db
          mountPath: /db
        livenessProbe:
          httpGet:
            path: /polls/
            port: 8000
