deployment/mysite-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysite
  labels:
    app: mysite
spec:
  volumes:
  - name: db
    persistentVolumeClaim:
      claimName: db
  containers:
  - name: mysite
    image: ghcr.io/chavezmac/cis92:main
    imagePullPolicy: Always
    resources:
      limits:
        cpu: 250m
        memory: 512Mi
        ephemeral-storage: 10Mi
    ports:
    - containerPort: 8000
    volumeMounts:
    - name: db
      mountPath: /db
    livenessProbe:
      httpGet:
        path: /polls/
        port: 8000
