deployment/postgres-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: data
  containers:
  - name: postgres
    image: docker.io/postgres:latest
    imagePullPolicy: IfNotPresent
    resources:
      limits:
        cpu: 250m
        memory: 512Mi
        ephemeral-storage: 10Mi
    ports:
    - containerPort: 5432
    volumeMounts:
    - name: data
      mountPath: /var/lib/postgresql
