deployment/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ClusterIP
  selector:
    app: mysite
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
